--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
@@ -8,6 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
+
         applicationId "com.example.weather"
         minSdkVersion 21
         targetSdkVersion 30
@@ -27,12 +29,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
 
+
+
 dependencies {
+
     implementation project(":core")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -50,7 +56,12 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     def room_version = "2.2.6"
+//    implementation "androidx.room:room-ktx:$room_version"
+//    annotationProcessor("androidx.room:room-compiler:$room_version")
+
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor("androidx.room:room-compiler:$room_version")
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.room:room-ktx:$room_version"
 
 }
