add getAllCitiesTodayWeather without callbacks, CityAdapetr add desc field

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Weather">
-        <activity android:name=".presentation.first_city.FirstCityActivity">
+        <activity android:name=".presentation.city_list.CityListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.city_list.CityListActivity">
+        <activity android:name=".presentation.first_city.FirstCityActivity">
             <intent-filter>
-                <action android:name="android.intent.action.ATTACH_DATA" />
+                <action android:name="android.intent.action.INSERT" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
